# otus_homework_01_hello_world

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yml
lib/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp
